# lista-de-listas-cli

./: Makefile  README.md  pyproject.toml  requirements.txt
lista_de_listas_cli/: database.py  facade.py  main.py  models.py  schemas.py  utils.py
tests/: conftest.py  test_facade.py  test_main.py  test_models.py  test_schemas.py  test_utils.py
